# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: pytest.yml  python-app.yml
page_analyzer/: __init__.py  app.py  db.py  find_value_html.py  get_content.py  html.py  init_db.py  rand.py  util.py
page_analyzer/database/: checks.py  db.py  urls.py
page_analyzer/modules/: db.py  html.py  urls.py  util.py
page_analyzer/static/css/: main.css
page_analyzer/templates/: 404.html  base.html  footer.html  header.html  index.html  url_id.html  urls.html
tests/: test_python_project_83.py
tests/fixtures/correct/: ramokna_description.txt  ramokna_h1.txt  ramokna_ru.html  ramokna_title.txt
tests/fixtures/uncorrect/: ozon_ru.html  ru_hexlet_io.html  ya_ru.html
