[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "page source code analyzer proj"
authors = ["sanswed <sanswed@gmail.com>"]
repository = "https://github.com/ConstableFraser/python-project-83"
packages = [
  { include = "page_analyzer" },
]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
gunicorn = "^20.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
