[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "page source code analyzer proj"
authors = ["sanswed <sanswed@gmail.com>"]
repository = "https://github.com/ConstableFraser/python-project-83"
packages = [
  { include = "page_analyzer" },
]

[tool.poetry.dependencies]
python = ">=3.8"
flask = ">=2.2.2"
gunicorn = ">=20.1.0"
python-dotenv = "^0.21.1"

[tool.poetry.dev-dependencies]
flake8 = ">=5.0.4"
pytest-cov = ">=3.0"
pytest = ">=7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
